--- a/themes/admin_default/css/blog.css
+++ b/themes/admin_default/css/blog.css
@@ -54,7 +54,6 @@ body{
 	color:red;
 	font-size:11px;
 }
-
 .bl-hr{
 	border-bottom: 1px solid #ddd;
 	-webkit-box-shadow: 0 1px rgba(255, 255, 255, 0.75);
@@ -63,6 +62,18 @@ body{
 	width: 100%;
 	margin: -1px 0 10px;
 	height: 1px;
+}
+.bl-ul{
+	line-height:20px;
+	list-style:none;
+	padding:0;
+	margin:0;
+}
+.bl-warning{
+	color:#e06f6f;
+}
+.bl-warning:hover{
+	color: #D02D2D;
 }
 
 /* TABLE */
@@ -275,6 +286,7 @@ select.blog-input{
 .add-icon{background: url('../images/blog/add-icon.png') no-repeat left center;padding-left: 17px;text-decoration:none}
 .list-icon{background: url('../images/blog/list-icon.png') no-repeat left center;padding-left: 17px;text-decoration:none}
 .note-icon{background: url('../images/blog/note-icon.png') no-repeat left center;padding-left: 17px;text-decoration:none}
+.warning-icon{background: url('../images/blog/warning-icon.png') no-repeat left center;padding-left: 17px;text-decoration:none}
 
 /* POST */
 .bl-post-col-left{
@@ -432,8 +444,19 @@ select.blog-input{
 	background:#f7f7f7;
 }
 
-
-
-
+/* MAIN */
+.bl-main-col{
+	float:left;
+	width:33.3333333333333333%;
+}
+.bl-main-col .col-1{
+	margin-right:6px;
+}
+.bl-main-col .col-2{
+	margin:0 3px;
+}
+.bl-main-col .col-3{
+	margin-left:6px;
+}
 
 
