--- a/themes/admin_default/css/blog.css
+++ b/themes/admin_default/css/blog.css
@@ -263,6 +263,10 @@ select.blog-input{
     box-shadow: 0px 1px 3px rgba(0,0,0,.3) inset;
     border: 1px solid #c9c9c9;
 }
+.bl-button-min{
+	padding-right:10px;
+	padding-left:10px;
+}
 
 .bl-txt-fh{
 	width:80%;
