Cập nhật các tính năng bình luận xã hội

--- a/themes/admin_default/css/blog.css
+++ b/themes/admin_default/css/blog.css
@@ -481,3 +481,9 @@ select.blog-input{
 
 /* DONATE */
 .bl-donate form{display:inline-block}
+
+
+/* COMMENT */
+.comment-table{
+	display: none;
+}
