--- a/themes/admin_default/css/blog.css
+++ b/themes/admin_default/css/blog.css
@@ -19,30 +19,34 @@ body{
 	line-height:1.4em;
 }
 .bl-col-left-small{
-	width:100px;
+	width:100px!important;
 }
 .bl-col-left-medium{
-	width:180px;
+	width:180px!important;
 }
 .bl-col-left-large{
-	width:250px;
+	width:250px!important;
 }
 .bl-col-left-largest{
-	width:400px;
+	width:400px!important;
 }
-.bl-col-id, .bl-col-order, .bl-col-status{
-	width:30px;
+.bl-col-id, .bl-col-status{
+	width:30px!important;
+	text-align:center;
+}
+.bl-col-order{
+	width:90px!important;
 	text-align:center;
 }
 .bl-col-time, .bl-col-number{
-	width:100px;
+	width:140px!important;
 	text-align:center;
 }
 .bl-col-day{
-	width:90px;
+	width:90px!important;
 }
 .bl-col-feature{
-	width:200px;
+	width:200px!important;
 	text-align:center;
 }
 .center{
@@ -81,73 +85,9 @@ body{
 .bl-warning:hover{
 	color: #D02D2D;
 }
-
-/* TABLE */
-table.tab1{
-	background:#fff;border-collapse:collapse;border-spacing:0px;caption-side:top;empty-cells:show;margin:0 0 5px 0;width:100%;
-	
-    -webkit-box-shadow: 0px 0px 2px rgba(0,0,0,.2);
-    -moz-box-shadow: 0px 0px 2px rgba(0,0,0,.2);
-    box-shadow: 0px 0px 2px rgba(0,0,0,.2);
-    
+.bl-inline-box{
+	margin: 0;
 }
-table.tab1 caption{
-	background:url('../images/blog/caption.gif') no-repeat left center;
-	font:inherit;
-	text-align:left;
-	text-indent:12px;
-	text-transform:uppercase;
-	font-weight:bold;
-	margin-bottom:10px;
-	margin-top:5px;
-}
-table.tab1 tbody {
-    background-color: #fefefe;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefefe), color-stop(100%, #f9f9f9));
-    background-image: -webkit-linear-gradient(bottom, #fefefe 0%, #f9f9f9 100%);
-    background-image: -moz-linear-gradient(bottom, #fefefe 0%, #f9f9f9 100%);
-    background-image: -o-linear-gradient(bottom, #fefefe 0%, #f9f9f9 100%);
-    background-image: -ms-linear-gradient(bottom, #fefefe 0%, #f9f9f9 100%);
-    background-image: linear-gradient(bottom, #fefefe 0%, #f9f9f9 100%);
-}
-table.tab1 tbody.second {
-    background-color: #f6f6f6;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f6f6f6), color-stop(100%, #f1f1f1));
-    background-image: -webkit-linear-gradient(bottom, #f6f6f6 0%, #f1f1f1 100%);
-    background-image: -moz-linear-gradient(bottom, #f6f6f6 0%, #f1f1f1 100%);
-    background-image: -o-linear-gradient(bottom, #f6f6f6 0%, #f1f1f1 100%);
-    background-image: -ms-linear-gradient(bottom, #f6f6f6 0%, #f1f1f1 100%);
-    background-image: linear-gradient(bottom, #f6f6f6 0%, #f1f1f1 100%);
-}
-table.tab1 td a, table.tab1 th a {color: #333;text-decoration: underline;}
-table.tab1 td, table.tab1 th{padding:5px;border:1px solid #e0e0e0}
-table.tab1 tfoot {
-	font:inherit;
-	font-weight:bold;
-	white-space:nowrap;
-    background-color: #ededed;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ededed), color-stop(100%, #e8eaeb));
-    background-image: -webkit-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -moz-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -o-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -ms-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-}
-table.tab1 th {background:#CCC;font-weight: normal;text-align: left}
-table.tab1 thead{
-	font:inherit;
-	font-weight:bold;
-	white-space:nowrap;
-    background-color: #ededed;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ededed), color-stop(100%, #e8eaeb));
-    background-image: -webkit-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -moz-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -o-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: -ms-linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-    background-image: linear-gradient(bottom, #ededed 0%, #e8eaeb 100%);
-}
-table.tab1 tbody.third, table.tab1 tbody.third:hover{background:#efefef}
-table.tab1 tbody:hover, table.tab1 tbody.second:hover{background:#efefef}
 
 /* ORDER DATA */
 .orderasc{height: 16px;padding-left: 16px;background-repeat: no-repeat;background-position: left center;background-image: url('../images/arrows/tall-up-arrow.gif');}
@@ -155,136 +95,22 @@ table.tab1 tbody:hover, table.tab1 tbody.second:hover{background:#efefef}
 .orderno{height: 16px;padding-left: 16px;background-repeat: no-repeat;background-position: left center;background-image: url('../images/collapse-all.gif');}
 
 /* INPUT */
-.blog-input{
-    padding: 7px 10px;
-    color: #555555;
-    font-size: 12px;
-    margin:0;
-    font-family: 'Droid Sans', sans-serif;
-    background-color: #fdfdfd;
-    border: 1px solid #c2c2c2;
-}
-.blog-input:hover{
-	border: 1px solid #a2a2a2;
-    outline: none;
-
-    box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-    -moz-box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-    -webkit-box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-}
-.blog-input:focus{
-	border: 1px solid #737373;
-    outline: none;
-
-    box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-    -moz-box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-    -webkit-box-shadow: -1px 1px 2px rgba(0,0,0,.1) inset;
-}
-select.blog-input{
-    padding: 6px 9px;
-}
-.blog-button{
-    padding: 8px 30px 7px 30px;
-    margin:0;
-    color: white;
-    font-size: 12px;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: bold;
-    background-color: #FEAF25;
-
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FEAE25), color-stop(100%, #FFBC47));
-    background-image: -webkit-linear-gradient(bottom, #FEAE25 0%, #FFBC47 100%);
-    background-image: -moz-linear-gradient(bottom, #FEAE25 0%, #FFBC47 100%);
-    background-image: -o-linear-gradient(bottom, #FEAE25 0%, #FFBC47 100%);
-    background-image: -ms-linear-gradient(bottom, #FEAE25 0%, #FFBC47 100%);
-    background-image: linear-gradient(bottom, #FEAE25 0%, #FFBC47 100%);
-
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    border: 1px solid #ff9b30;
-    text-shadow: 0px 1px 0px #ff7e00;
-}
-.blog-button:hover{
-    background-color: #FFA70F;
-
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FF9900), color-stop(100%, #FFAF26));
-    background-image: -webkit-linear-gradient(bottom, #FF9900 0%, #FFAF26 100%);
-    background-image: -moz-linear-gradient(bottom, #FF9900 0%, #FFAF26 100%);
-    background-image: -o-linear-gradient(bottom, #FF9900 0%, #FFAF26 100%);
-    background-image: -ms-linear-gradient(bottom, #FF9900 0%, #FFAF26 100%);
-    background-image: linear-gradient(bottom, #FF9900 0%, #FFAF26 100%);
-
-    -webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    border: 1px solid #ff7e00;
-}
-.blog-button:active{
-    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,.2) inset;
-    -moz-box-shadow: 0px 1px 3px rgba(0,0,0,.2) inset;
-    box-shadow: 0px 1px 3px rgba(0,0,0,.2) inset;
-    border: 1px solid #ff6600;
-}
-.blog-button-2{
-    padding: 8px 30px 7px 30px;
-    margin:0;
-    color: #222222;
-    font-size: 12px;
-    cursor: pointer;
-    font-weight: bold;
-    background-color: #F0F0F0;
-
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #F0F0F0), color-stop(100%, #F5F5F5));
-    background-image: -webkit-linear-gradient(bottom, #F0F0F0 0%, #F5F5F5 100%);
-    background-image: -moz-linear-gradient(bottom, #F0F0F0 0%, #F5F5F5 100%);
-    background-image: -o-linear-gradient(bottom, #F0F0F0 0%, #F5F5F5 100%);
-    background-image: -ms-linear-gradient(bottom, #F0F0F0 0%, #F5F5F5 100%);
-    background-image: linear-gradient(bottom, #F0F0F0 0%, #F5F5F5 100%);
-
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    border: 1px solid #dcdcdc;
-}
-.blog-button-2:hover{
-    background-color: #E8E8E8;
-
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #E8E8E8), color-stop(100%, #F5F5F5));
-    background-image: -webkit-linear-gradient(bottom, #E8E8E8 0%, #F5F5F5 100%);
-    background-image: -moz-linear-gradient(bottom, #E8E8E8 0%, #F5F5F5 100%);
-    background-image: -o-linear-gradient(bottom, #E8E8E8 0%, #F5F5F5 100%);
-    background-image: -ms-linear-gradient(bottom, #E8E8E8 0%, #F5F5F5 100%);
-    background-image: linear-gradient(bottom, #E8E8E8 0%, #F5F5F5 100%);
-
-    -webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    box-shadow: 0px 1px 1px rgba(0,0,0,.3);
-    border: 1px solid #cecece;
-}
-.blog-button-2:active{
-    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,.3) inset;
-    -moz-box-shadow: 0px 1px 3px rgba(0,0,0,.3) inset;
-    box-shadow: 0px 1px 3px rgba(0,0,0,.3) inset;
-    border: 1px solid #c9c9c9;
-}
 .bl-button-min{
 	padding-right:10px;
 	padding-left:10px;
 }
 
 .bl-txt-fh{
-	width:80%;
+	width:80%!important;
 }
 .bl-txt-f{
-	width:98%;
+	width:98%!important;
 }
 .bl-txt-h{
-	width:49%;
+	width:49%!important;
 }
 .bl-txt-q{
-	width:25%;
+	width:25%!important;
 }
 
 .textarea-animated{-webkit-transition: height 0.2s;-moz-transition: height 0.2s;transition: height 0.2s;}
@@ -351,6 +177,9 @@ select.blog-input{
 	cursor:pointer;
 	background:#f4f4f4 url('../images/blog/arrow-1-up.png') no-repeat 98% center;
 	font-weight:700;
+}
+.bl-post-panel.collapse, .bl-post-panel.decollapse{
+	display: inherit!important;
 }
 .bl-post-panel.collapse .tl{
 	background:#f4f4f4 url('../images/blog/arrow-1-down.png') no-repeat 98% center;
